--- a/style.css
+++ b/style.css
@@ -35,16 +35,16 @@ body {
     display: flex;
   }
   ul {
-    margin:0;
+    margin: 0;
     padding: 0px;
   }
   li,
   h3 {
-    list-style:none;
+    list-style: none;
   }
   input,
   button{
-    outline:none;
+    outline: none;
   }
   button {
     background: none;
@@ -93,6 +93,9 @@ body {
   input#new-task {
     width: 318px;
   }
+  p > button:hover {
+    color: #0fc57c;
+  }
   
   /* Task list */
   li {
@@ -120,6 +123,9 @@ body {
   li >    input[type="text"] {
     width: 226px
   }
+  li > button.delete:hover {
+    color: #cf2323;
+  }
   button.delete img {
     height: 2em;
     transform: rotateZ(45deg);
@@ -137,14 +143,14 @@ body {
   
   /* Edit Task */
   ul li input[type=text] {
-    display:none
+    display: none
   }
   
   ul li.edit-mode input[type=text] {
-    display:inline-block;
-    width:224px
+    display: inline-block;
+    width: 224px
   }
   
   ul li.edit-mode label {
-    display:none;
+    display: none;
   }
