refactor: add indents for the content of the blocks in css according to rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@ body {
   }
   
   @media (max-width:768px) {
-    .link { text-align: center;
-  }
+    
+    .link {
+      text-align: center;
+    }
+    
   }
   .main {
     display: block;
