--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.common-style {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.link img {
+.link-image {
   width: 100%;
 }
 .link .more-info {
@@ -49,7 +49,7 @@ input,
 button{
   outline: none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -58,12 +58,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.header,
+.add-task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -72,7 +72,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -84,24 +84,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-task-label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.input#new-task {
   width: 318px;
-}
-p > button:hover {
-  color: #0fc57c;
 }
 
 /* Task list */
-li {
+.tasks {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -110,50 +107,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.tasks > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.tasks > .checkbox {
   margin: 0 10px;
 }
-li > label {
+.tasks > .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.tasks > .input {
   width: 226px
 }
-li > button.delete:hover {
-  color: #cf2323;
-}
-button.delete img {
+.btn.delete .delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn.delete .delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.tasks .input {
   display: none
 }
 
-ul li.edit-mode input[type=text] {
+.tasks.edit-mode .input {
   display: inline-block;
   width: 224px
 }
 
-ul li.edit-mode label {
+.tasks.edit-mode .label {
   display: none;
 }
