--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-wrapper {
   display: flex;
@@ -121,7 +121,7 @@ button{
   width: 226px;
 }
 .tasks > .input {
-  width: 226px
+  width: 226px;
 }
 .btn.delete .delete-img {
   height: 2em;
@@ -134,18 +134,18 @@ button{
 
 /* Completed */
 #completed-tasks .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .tasks .input {
-  display: none
+  display: none;
 }
 
 .tasks.edit-mode .input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .tasks.edit-mode .label {
