--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
   display: block;
   text-align: right;
 }
-.link-image {
+.link__image {
   width: 100%;
 }
-.link .more-info {
+.link__info {
   font-family: fantasy, cursive;
 }
 
@@ -29,12 +29,13 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.add-task__task,
+.task__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-wrapper {
+.add-task__content {
   display: flex;
 }
 ul {
@@ -49,7 +50,8 @@ input,
 button{
   outline: none;
 }
-.btn {
+.add-task__btn,
+.task__btn {
   background: none;
   border: 0px;
   color: #888;
@@ -58,12 +60,13 @@ button{
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-.btn:hover {
+.add-task__btn:hover,
+.task__btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
 .header,
-.add-task-label {
+.add-task__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -72,7 +75,8 @@ button{
   margin: 0;
   text-transform: uppercase;
 }
-.input {
+.add-task__input,
+.task__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -84,21 +88,22 @@ button{
   font-family: Lato, sans-serif;
   color: #888;
 }
-.input:focus {
+.add-task__input:focus,
+.task__input:focus {
   color: #333;
 }
 
 /* New Task */
-.add-task-label {
+.add-task__label {
   display: block;
   margin: 0 0 20px;
 }
-.input#new-task {
+.add-task__input {
   width: 318px;
 }
 
 /* Task list */
-.tasks {
+.task {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -107,47 +112,46 @@ button{
   justify-content: space-between;
   align-items: center;
 }
-.tasks > * {
+.task > * {
   vertical-align: middle;
 }
 
-.tasks > .checkbox {
+.task__checkbox {
   margin: 0 10px;
 }
-.tasks > .label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.tasks > .input {
+.task > .task__input {
   width: 226px;
 }
-.btn.delete .delete-img {
+.task__img_delete {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.btn.delete .delete-img:hover {
+.task__img_delete:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks .label {
+.completed-tasks .task__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.tasks .input {
+.task .task__input {
   display: none;
 }
-
-.tasks.edit-mode .input {
+.task.edit-mode .task__input {
   display: inline-block;
   width: 224px;
 }
 
-.tasks.edit-mode .label {
+.task.edit-mode .task__label {
   display: none;
 }
